--- a/src/app/section/section.component.scss
+++ b/src/app/section/section.component.scss
@@ -1,16 +1,20 @@
 .section {
 	position: relative;
 	height: 100vh;
+	min-height: 100vh;
 }
 
 .h-10 {
 	height: 10vh;
+	min-height: 10vh;
 }
 
 .h-90 {
 	height: 90vh;
+	min-height: 90vh;
 }
 
 .h-80 {
 	height: 80vh;
+	min-height: 80vh;
 }
