Fixed style issues

--- a/src/app/social/social.component.html
+++ b/src/app/social/social.component.html
@@ -6,7 +6,7 @@
 
 		<hr class="w-75 toggleTheme" />
 
-		<div class="d-flex justify-content-around align-items-center">
+		<div class="row justify-content-around align-items-center">
 
 			<a class="toggleTheme m-2" href="https://twitter.com/official_ppabli/" target="_blank">
 
