--- a/src/app/section/section.component.scss
+++ b/src/app/section/section.component.scss
@@ -4,17 +4,10 @@
 	min-height: 100vh;
 }
 
-.h-10 {
-	height: 10vh;
-	min-height: 10vh;
+.h-15 {
+	height: 15%;
 }
 
-.h-90 {
-	height: 90vh;
-	min-height: 90vh;
-}
-
-.h-80 {
-	height: 80vh;
-	min-height: 80vh;
+.h-70 {
+	height: 70%;
 }
