--- a/src/app/section/section.component.scss
+++ b/src/app/section/section.component.scss
@@ -1,13 +1,13 @@
 .section {
 	position: relative;
 	height: 100vh;
-	min-height: 100vh;
+	height: calc(var(--vh, 1vh) * 100);
 }
 
-.h-15 {
-	height: 15%;
+.h-10 {
+	height: 10%;
 }
 
-.h-70 {
-	height: 70%;
+.h-80 {
+	height: 80%;
 }
