Fixed style issues

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="position-relative" (touchstart)="setTS($event)" (touchmove)="onTouchScroll($event)" (wheel)="onWheelScroll($event)" #main>
+<div class="position-relative" (touchmove)="nullEvent($event)" (wheel)="onWheelScroll($event)" #main>
 
 	<app-section></app-section>
 	<app-section></app-section>
