--- a/src/app/languages/languages.component.html
+++ b/src/app/languages/languages.component.html
@@ -8,15 +8,16 @@
 
 		<div class='row justify-content-center align-items-center'>
 
-			<p class='toggleTheme border m-2 p-2 w-25'>Java</p>
-			<p class='toggleTheme border m-2 p-2 w-25'>Python</p>
-			<p class='toggleTheme border m-2 p-2 w-25'>C</p>
-			<p class='toggleTheme border m-2 p-2 w-25'>C++</p>
-			<p class='toggleTheme border m-2 p-2 w-25'>JS</p>
-			<p class='toggleTheme border m-2 p-2 w-25'>NodeJS</p>
-			<p class='toggleTheme border m-2 p-2 w-25'>TS</p>
-			<p class='toggleTheme border m-2 p-2 w-25'>MySQL</p>
-			<p class='toggleTheme border m-2 p-2 w-25'>PHP</p>
+			<p class='toggleTheme border m-2 p-2 col-3'>Java</p>
+			<p class='toggleTheme border m-2 p-2 col-3'>Python</p>
+			<p class='toggleTheme border m-2 p-2 col-3'>C</p>
+			<p class='toggleTheme border m-2 p-2 col-3'>C++</p>
+			<p class='toggleTheme border m-2 p-2 col-3'>JS</p>
+			<p class='toggleTheme border m-2 p-2 col-3'>NodeJS</p>
+			<p class='toggleTheme border m-2 p-2 col-3'>TS</p>
+			<p class='toggleTheme border m-2 p-2 col-3'>MySQL</p>
+			<p class='toggleTheme border m-2 p-2 col-3'>PHP</p>
+			<p class='toggleTheme m-2 p-2 col-12'>{{ 'languages.more' | translate }}</p>
 
 		</div>
 
