--- a/src/app/tecnologies/tecnologies.component.html
+++ b/src/app/tecnologies/tecnologies.component.html
@@ -8,14 +8,13 @@
 
 		<div class='row justify-content-center align-items-center'>
 
-			<p class='toggleTheme border m-2 p-2 w-25'>Angular</p>
-			<p class='toggleTheme border m-2 p-2 w-25'>VueJS</p>
-			<p class='toggleTheme border m-2 p-2 w-25'>Bootstrap</p>
-			<p class='toggleTheme border m-2 p-2 w-25'>Docker</p>
-			<p class='toggleTheme border m-2 p-2 w-25'>SonarQube</p>
-			<p class='toggleTheme border m-2 p-2 w-25'>Maven</p>
-			<p class='toggleTheme border m-2 p-2 w-25'>SpringBoot</p>
-			<p class='toggleTheme border m-2 p-2 w-25'>Jenkins</p>
+			<p class='toggleTheme border m-2 p-2 col-6 col-md-4'>Angular</p>
+			<p class='toggleTheme border m-2 p-2 col-6 col-md-4'>VueJS</p>
+			<p class='toggleTheme border m-2 p-2 col-6 col-md-4'>Bootstrap</p>
+			<p class='toggleTheme border m-2 p-2 col-6 col-md-4'>Docker</p>
+			<p class='toggleTheme border m-2 p-2 col-6 col-md-4'>SpringBoot</p>
+			<p class='toggleTheme border m-2 p-2 col-6 col-md-4'>Jenkins</p>
+			<p class='toggleTheme m-2 p-2 col-12'>{{ 'tecnologies.more' | translate }}</p>
 
 		</div>
 
