Updated angular version and toast when contact message sent

--- a/src/app/social/social.component.html
+++ b/src/app/social/social.component.html
@@ -1,46 +1,46 @@
 <div class="d-flex h-100 justify-content-center align-items-center">
 
-	<div class="col-10 col-md-8 col-lg-6 col-xl-4">
+	<div class="col-10 justify-content-center col-md-8 col-lg-6 col-xl-4">
 
 		<h3 class="text-center toggleTheme">{{ 'social.title' | translate }}</h3>
 
 		<hr class="w-75 toggleTheme" />
 
-		<div class="row justify-content-around align-items-center">
+		<div class="row">
 
-			<a class="toggleTheme m-2" href="https://twitter.com/official_ppabli/" target="_blank">
+			<a class="toggleTheme col-xl-2 col-md-4 mb-4 text-center" href="https://twitter.com/official_ppabli/" target="_blank">
 
-				<i-feather name="Twitter" class="big"></i-feather>
-
-			</a>
-
-			<a class="toggleTheme m-2" href="https://github.com/ppabli/" target="_blank">
-
-				<i-feather name="Github" class="big"></i-feather>
+				<i data-feather="twitter" class="big"></i>
 
 			</a>
 
-			<a class="toggleTheme m-2" href="https://www.twitch.tv/ppabli/" target="_blank">
+			<a class="toggleTheme col-xl-2 col-md-4 mb-4 text-center" href="https://github.com/ppabli/" target="_blank">
 
-				<i-feather name="Twitch" class="big"></i-feather>
-
-			</a>
-
-			<a class="toggleTheme m-2" href="https://www.youtube.com/channel/UCxZr2Cqw_O559fwR356VPhA/" target="_blank">
-
-				<i-feather name="Youtube" class="big"></i-feather>
+				<i data-feather="github" class="big"></i>
 
 			</a>
 
-			<a class="toggleTheme m-2" href="https://www.instagram.com/pablo_liste/" target="_blank">
+			<a class="toggleTheme col-xl-2 col-md-4 mb-4 text-center" href="https://www.twitch.tv/ppabli/" target="_blank">
 
-				<i-feather name="Instagram" class="big"></i-feather>
+				<i data-feather="twitch" class="big"></i>
 
 			</a>
 
-			<a class="toggleTheme m-2" href="https://www.linkedin.com/in/pablo-liste-cancela-1410721a4/" target="_blank">
+			<a class="toggleTheme col-xl-2 col-md-4 mb-4 text-center" href="https://www.youtube.com/channel/UCxZr2Cqw_O559fwR356VPhA/" target="_blank">
 
-				<i-feather name="Linkedin" class="big"></i-feather>
+				<i data-feather="youtube" class="big"></i>
+
+			</a>
+
+			<a class="toggleTheme col-xl-2 col-md-4 mb-4 text-center" href="https://www.instagram.com/pablo_liste/" target="_blank">
+
+				<i data-feather="instagram" class="big"></i>
+
+			</a>
+
+			<a class="toggleTheme col-xl-2 col-md-4 mb-4 text-center" href="https://www.linkedin.com/in/pablo-liste-cancela-1410721a4/" target="_blank">
+
+				<i data-feather="linkedin" class="big"></i>
 
 			</a>
 
